--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#">Features</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Testimonials</a></li>
-                <li><a href="https://forms.gle/eu1Ks35Kp3SAxnkE8" class="btn">Ask Me?</a></li>
+                <li><a href="https://forms.gle/eqa1KRRE8vKTkeP69" class="btn">Book A Tutor</a></li>
               </ul>
             </div>
 
@@ -47,7 +47,7 @@
                 Are you ready to get on top of your game and get those A's that you have been hoping for. Just Tap the button below.
               </p>
               <div class="cta">
-                <a href="https://forms.gle/eqa1KRRE8vKTkeP69" class="btn">Book A Tutor</a>
+                <a href="https://forms.gle/eu1Ks35Kp3SAxnkE8" class="btn">Ask Me?</a>
               </div>
             </div>
 
